[gd_scene load_steps=3 format=2]

[ext_resource path="res://_core/actors/galaxy/stars/planets/planet.gd" type="Script" id=1]
[ext_resource path="res://_core/actors/galaxy/stars/planets/satelliteManager.gd" type="Script" id=2]

[node name="planet" type="Node2D"]
script = ExtResource( 1 )

[node name="satelliteManager" type="Node" parent="."]
script = ExtResource( 2 )

[node name="upgradesMarket" type="Node" parent="."]

[node name="cargoMarket" type="Node" parent="."]

[node name="modulesMarket" type="Node" parent="."]

[node name="crewMarket" type="Node" parent="."]

[node name="jobMarket" type="Node" parent="."]
